--- a/cluster-red/aws-managed-controlplane.yaml
+++ b/cluster-red/aws-managed-controlplane.yaml
@@ -5,5 +5,5 @@ metadata:
   namespace: default
 spec:
   region: us-west-2
-  sshKeyName: eksadm-key.pem
+  sshKeyName: eksadm-key
   version: v1.18
