--- a/cluster-red/aws-machine-template.yaml
+++ b/cluster-red/aws-machine-template.yaml
@@ -1,7 +1,7 @@
 apiVersion: infrastructure.cluster.x-k8s.io/v1alpha3
 kind: AWSMachineTemplate
 metadata:
-  name: managed-test-md-0
+  name: red-cluster-0
   namespace: default
 spec:
   template:
