--- a/cluster-red/cluster.yaml
+++ b/cluster-red/cluster.yaml
@@ -1,7 +1,7 @@
 apiVersion: cluster.x-k8s.io/v1alpha3
 kind: Cluster
 metadata:
-  name: managed-test
+  name: red-cluster
   namespace: default
 spec:
   clusterNetwork:
@@ -11,8 +11,8 @@ spec:
   controlPlaneRef:
     apiVersion: controlplane.cluster.x-k8s.io/v1alpha3
     kind: AWSManagedControlPlane
-    name: managed-test-control-plane
+    name: red-cluster-control-plane
   infrastructureRef:
     apiVersion: controlplane.cluster.x-k8s.io/v1alpha3
     kind: AWSManagedControlPlane
-    name: managed-test-control-plane
+    name: red-cluster-control-plane
