--- a/cluster-red/machine-deployment.yaml
+++ b/cluster-red/machine-deployment.yaml
@@ -1,10 +1,10 @@
 apiVersion: cluster.x-k8s.io/v1alpha3
 kind: MachineDeployment
 metadata:
-  name: managed-test-md-0
+  name: red-cluster-md-0
   namespace: default
 spec:
-  clusterName: managed-test
+  clusterName: red-cluster
   replicas: 1
   selector:
     matchLabels: null
@@ -14,10 +14,10 @@ spec:
         configRef:
           apiVersion: bootstrap.cluster.x-k8s.io/v1alpha3
           kind: EKSConfigTemplate
-          name: managed-test-md-0
-      clusterName: managed-test
+          name: red-cluster-md-0
+      clusterName: red-cluster
       infrastructureRef:
         apiVersion: infrastructure.cluster.x-k8s.io/v1alpha3
         kind: AWSMachineTemplate
-        name: managed-test-md-0
+        name: red-cluster-md-0
       version: v1.17.0
