--- a/cluster-red/aws-machine-template.yaml
+++ b/cluster-red/aws-machine-template.yaml
@@ -1,6 +1,8 @@
 apiVersion: infrastructure.cluster.x-k8s.io/v1alpha3
 kind: AWSMachineTemplate
 metadata:
+  labels:
+    cluster: eks
   name: red-cluster-md-0
   namespace: default
 spec:
