--- a/cluster-red/cluster.yaml
+++ b/cluster-red/cluster.yaml
@@ -1,6 +1,8 @@
 apiVersion: cluster.x-k8s.io/v1alpha3
 kind: Cluster
 metadata:
+  labels:
+    cluster: eks
   name: red-cluster
   namespace: default
 spec:
