--- a/cluster-red/eks-config-template.yaml
+++ b/cluster-red/eks-config-template.yaml
@@ -1,6 +1,8 @@
 apiVersion: bootstrap.cluster.x-k8s.io/v1alpha3
 kind: EKSConfigTemplate
 metadata:
+  labels:
+    cluster: eks
   name: red-cluster-md-0
   namespace: default
 spec:
